More work on the modules ...

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -1,27 +1,6 @@
 #
-# see source of class org.jfree.report.util.ReportConfiguration for keys
-# Additional keys:
-#
-
-#
-# Global Configuration: These keys affect the whole VM and cannot be changed once
-# they are configured unless the VM is restarted.
-
-#
 # The minimum loglevel that is logged
 org.jfree.report.LogLevel=Debug
-
-#
-# These properties define whether a specific export plugin will be available
-# in the preview dialog. To disable a plugin by default, set the property to "false".
-#
-org.jfree.report.preview.plugin.pdf=true
-org.jfree.report.preview.plugin.csv=true
-org.jfree.report.preview.plugin.html=true
-org.jfree.report.preview.plugin.excel=true
-org.jfree.report.preview.plugin.plain=true
-org.jfree.report.preview.plugin.page-setup=true
-org.jfree.report.preview.plugin.print=true
 
 #
 # Defines a stricter error handling, if set to true, then all errors that
@@ -37,14 +16,14 @@ org.jfree.report.StrictErrorHandling=true
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
 # If your text is not correctly aligned, disable this property.
 #
-org.jfree.report.targets.G2OutputTarget.useAliasing=true
+org.jfree.report.layout.FontRenderer.useAliasing=true
 
 #
 # This is a override setting. Some Graphics2D implementations have problems
 # with the font positioning. I don't know a way to resolve that bug, try
 # setting this property to "true" to resolve wrong/buggy string draw results.
 #
-org.jfree.report.targets.G2OutputTarget.isBuggyFRC=false
+org.jfree.report.layout.FontRenderer.isBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
@@ -61,11 +40,6 @@ org.jfree.report.PrintOperationComment=false
 org.jfree.report.WarnInvalidColumns=true
 
 #
-# The tablemodel factory mode for the ResultSetTableModelFactory
-# if set to "simple" the factory will always return a DefaultTableModel
-#org.jfree.report.TableFactoryMode=simple
-
-#
 # Should the debugging system be disabled by default. This option will surpress all
 # output, no single line of debug information will be printed. If you want to remove
 # System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
@@ -76,37 +50,38 @@ org.jfree.report.NoDefaultDebug=false
 # The following keys can be redefined for all report-instances.
 
 #
-# Defines a preferred size for the preview frame. Both width and height must be set,
-# proportional values are allowed (100%, 90% etc). They have the same syntax as the
-# proportional values in the xml definition.
+# Defines the known modules. It is not fatal if they are not found.
 #
-# None of the values is defined by default
-#org.jfree.report.preview.PreferredWidth=640
-#org.jfree.report.preview.PreferredHeight=480
+org.jfree.report.modules.gui.base.Module=org.jfree.report.modules.gui.base.PreviewBaseModule
+org.jfree.report.modules.gui.converter.Module=org.jfree.report.modules.gui.converter.ConverterGUIModule
+org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExportGUIModule
 
 #
-# Defines the maximum width for the preview frame. If the width is defined, a component
-# listener will be used to enforce the defined width.
-# The value is not defined by default
-#org.jfree.report.preview.MaximumWidth=800
+# Helper modules ..
+org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
+org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
+org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
+
+# Output modules
+org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
+org.jfree.report.modules.output.xml.Module=org.jfree.report.modules.output.xml.XMLModule
+org.jfree.report.modules.output.support.itext.Module=org.jfree.report.modules.output.support.itext.BaseFontModule
+
+# pageable output modules
+org.jfree.report.modules.output.pageable.base.Module=org.jfree.report.modules.output.pageable.base.PageableBaseModule
+org.jfree.report.modules.output.pageable.graphics.Module=org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
+org.jfree.report.modules.output.pageable.pdf.Module=org.jfree.report.modules.output.pageable.pdf.PDFPageableModule
+org.jfree.report.modules.output.pageable.plaintext.Module=org.jfree.report.modules.output.pageable.plaintext.PlainTextPageableModule
+
+# table output modules
+org.jfree.report.modules.output.table.base.Module=org.jfree.report.modules.output.table.base.TableBaseModule
+org.jfree.report.modules.output.table.csv.Module=org.jfree.report.modules.output.table.csv.CSVTableModule
+org.jfree.report.modules.output.table.html.Module=org.jfree.report.modules.output.table.html.HTMLTableModule
+org.jfree.report.modules.output.table.rtf.Module=org.jfree.report.modules.output.table.rtf.RTFTableModule
+org.jfree.report.modules.output.table.xls.Module=org.jfree.report.modules.output.table.xls.XLSTableModule
 
 #
-# Defines the maximum height for the preview frame. If the height is defined, a component
-# listener will be used to enforce that value.
-# The value is not defined by default
-#org.jfree.report.preview.MaximumHeight=600
-
-#
-# The property that defines which encodings are available in the export dialogs.
-# This property defaults to "all" and can be set to either "all", "none" or "file".
-#
-# If the property is set to "file", then the list of available properties is read
-# from the file defined in the property "org.jfree.report.encodings.file".
-org.jfree.report.encodings.available=file
-
-#
-# The name of the properties file used to define the available encodings.
-# The property points to a resources in the classpath, not to a real file!
-org.jfree.report.encodings.file=/org/jfree/report/jfreereport-encodings.properties
-
-
+# XML Parser modules ..
+org.jfree.report.modules.parser.base.Module=org.jfree.report.modules.parser.base.ParserBaseModule
+org.jfree.report.modules.parser.ext.Module=org.jfree.report.modules.parser.ext.ExtParserModule
+org.jfree.report.modules.parser.simple.Module=org.jfree.report.modules.parser.simple.SimpleParserModule
