--- a/jfreereport/source/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
@@ -32,6 +32,8 @@ UTF-16LE=false
 
 #Windows Eastern Europe
 Cp1250=true
+#Windows Russian (Cyrillic)
+Cp1251=true
 #Windows Greek
 Cp1253=true
 #Windows Turkish
