--- a/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
@@ -10,3 +10,24 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+
+depends:
+  module: org.jfree.report.modules.gui.base.PreviewBaseModule
+  version.major: 0
+  version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.parser.ext.ExtParserModule
+  version.major: 0
+  version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.parser.simple.SimpleParserModule
+  version.major: 0
+  version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.parser.base.ParserBaseModule
+  version.major: 0
+  version.minor: 84
+
