--- a/jfreereport/source/org/jfree/report/modules/gui/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/configuration.properties
@@ -1,6 +1,26 @@
 #
+# Configuration settings for the CSV export dialog component.
+#
+
+#
+# Set to false to disable the CSV export using the preview dialog.
+# This will not prevent anyone from calling the dialog manually, but
+# the export plugin will not be included by default.
+#
+org.jfree.report.modules.gui.csv.Enable=true
+
+#
+# The order defines the menu layout of all plugins. The value defined
+# here is suitable for the default configuration. Increasing the
+# order value will move the menu entry for this plugin to the end of the list.
+#
+org.jfree.report.modules.gui.csv.Order=40
+
+#
 # Selected default encoding for the csv export dialog.
 # This properties does not affect the CSV export directly, it is
 # used to configure the used writer when writing. 
 #
-org.jfree.report.modules.gui.csv.Encoding
+# If not defined here, it will default to the platform specific encoding.
+#
+#org.jfree.report.modules.gui.csv.Encoding=Cp1252
