--- a/jfreereport/source/org/jfree/report/modules/gui/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/configuration.properties
@@ -1,3 +1,17 @@
 #
-# Defines the default encoding for html files
+# Configuration settings for the HTML export dialog component.
 #
+
+#
+# Set to false to disable the HTML export using the preview dialog.
+# This will not prevent anyone from calling the dialog manually, but
+# the export plugin will not be included by default.
+#
+org.jfree.report.modules.gui.html.Enable=true
+
+#
+# The order defines the menu layout of all plugins. The value defined
+# here is suitable for the default configuration. Increasing the
+# order value will move the menu entry for this plugin to the end of the list.
+#
+org.jfree.report.modules.gui.html.Order=30
