--- a/jfreereport/source/org/jfree/report/modules/gui/xls/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/module.properties
@@ -1,17 +1,24 @@
 #
-# Report converter GUI for the report writer
+# Export dialogs for Excel files.
+#
+# External libraries: Apache-POI > 1.10
 #
 
 module-info:
-  name: html-export-gui
+  name: xls-export-gui
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: A dialog component for the HTML table export.
+  description: A dialog component for the Excel table export.
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
 
 depends:
-  module: org.jfree.report.modules.output.table.html.HTMLTableModule
+  module: org.jfree.report.modules.output.table.xls.XLSTableModule
+  version.major: 0
+  version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.gui.base.PreviewBaseModule
   version.major: 0
   version.minor: 84
 
