--- a/jfreereport/source/org/jfree/report/modules/output/support/itext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/support/itext/configuration.properties
@@ -1,6 +1,8 @@
 #
 # AutoInit the iText font support? Searches and registers all ttf-fonts
-# on the system
+# on the system ("onInit", "never", "lazy")
 #
-org.jfree.report.modules.output.support.itext.AutoInit=true
+org.jfree.report.modules.output.support.itext.AutoInit=lazy
+
+
 
