--- a/jfreereport/source/org/jfree/report/modules/gui/csv/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/module.properties
@@ -11,6 +11,11 @@ module-info:
   version.patchlevel: 0
 
 depends:
+  module: org.jfree.report.modules.gui.base.PreviewBaseModule
+  version.major: 0
+  version.minor: 84
+
+depends:
   module: org.jfree.report.modules.output.csv.CSVModule
   version.major: 0
   version.minor: 84
