--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
@@ -15,4 +15,9 @@ depends:
   version.major: 0
   version.minor: 84
 
+depends:
+  module: org.jfree.report.modules.gui.base.PreviewBaseModule
+  version.major: 0
+  version.minor: 84
+
 
