--- a/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
@@ -1,5 +1,5 @@
 #
-# A dialog component for the PDF table export.
+# A dialog component for printing reports using the JDK 1.2.2 PrintAPI
 #
 
 module-info:
@@ -12,6 +12,11 @@ module-info:
 
 depends:
   module: org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
+  version.major: 0
+  version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.gui.base.PreviewBaseModule
   version.major: 0
   version.minor: 84
 
