--- a/jfreereport/source/org/jfree/report/modules/parser/ext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/ext/module.properties
@@ -11,3 +11,7 @@ module-info:
   version.minor: 84
   version.patchlevel: 0
 
+depends:
+  module: org.jfree.report.modules.parser.base.ParserBaseModule
+  version.major: 0
+  version.minor: 84
