--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -27,7 +27,7 @@ org.jfree.report.layout.FontRenderer.isBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
-#org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
+org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
 
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
@@ -61,6 +61,7 @@ org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExpo
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
+org.jfree.report.modules.misc.logging.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
 
 # Output modules
 org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
@@ -85,3 +86,4 @@ org.jfree.report.modules.output.table.xls.Module=org.jfree.report.modules.output
 org.jfree.report.modules.parser.base.Module=org.jfree.report.modules.parser.base.ParserBaseModule
 org.jfree.report.modules.parser.ext.Module=org.jfree.report.modules.parser.ext.ExtParserModule
 org.jfree.report.modules.parser.simple.Module=org.jfree.report.modules.parser.simple.SimpleParserModule
+
