LogTargets are initialized properly ..

--- a/jfreereport/source/org/jfree/report/modules/misc/logging/systemout/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/logging/systemout/module.properties
@@ -11,7 +11,7 @@ module-info:
   version.patchlevel: 0
 
 depends:
-  module: org.jfree.report.modules.misc.logging.base
+  module: org.jfree.report.modules.misc.logging.base.DefaultLogModule
   version.major: 0
   version.minor: 84
   
