--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -61,7 +61,8 @@ org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExpo
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
-org.jfree.report.modules.misc.logging.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
+org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
+org.jfree.report.modules.misc.logging.systemout.Module=org.jfree.report.modules.misc.logging.systemout.SystemOutLogModule
 
 # Output modules
 org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
