More work on the table targets to reduce memory footprint, bug fixes and configstore for basefont support ...

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -3,6 +3,12 @@
 org.jfree.report.LogLevel=Debug
 
 #
+# Where to store cached configuration data
+#
+org.jfree.report.ConfigStore=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStorage
+
+
+#
 # Defines a stricter error handling, if set to true, then all errors that
 # occur during the report processing will cause the report processing to fail.
 # It is safe to set this to true, as valid reports never throw exceptions.
@@ -63,6 +69,8 @@ org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
 org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
 org.jfree.report.modules.misc.logging.systemout.Module=org.jfree.report.modules.misc.logging.systemout.SystemOutLogModule
+org.jfree.report.modules.misc.configstore.base.Module=org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
+org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStoreModule
 
 # Output modules
 org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
