--- a/jfreereport/source/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
@@ -69,7 +69,7 @@ MS932=true
 # JISX 0201, 0208 and 0212, EUC encoding Japanese
 EUC-JP=true
 # JISX 0201, 0208, EUC encoding Japanese
-EUC-JP-LINUX
+EUC-JP-LINUX=true
 # Shift-JIS, Japanese
 SJIS=true
 # JIS X 0201, 0208, in ISO 2002 form, Japanese
