--- a/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
@@ -14,10 +14,10 @@ module-info:
 # Requires the external library "itext-1.00"
 #
 
-#depends:
-#  module: org.jfree.report.modules.output.base.OutputBaseModule
-#  version.major: 0
-#  version.minor: 84
-#
+depends:
+  module: org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
+  version.major: 0
+  version.minor: 84
+
 #optional:
 #  module: ...
