--- a/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
@@ -7,5 +7,5 @@
 org.jfree.report.ext.modules.barcode.base.Module=org.jfree.report.ext.modules.barcode.base.BarcodeBaseModule
 org.jfree.report.ext.modules.barcode.io.Module=org.jfree.report.ext.modules.barcode.io.BarcodeIOModule
 org.jfree.report.ext.modules.java14log.Module=org.jfree.report.ext.modules.java14log.Java14LogModule
-org.jfree.report.ext.modules.log4jlog.Module=org.jfree.report.ext.modules.log4jlogLog4JModule
+org.jfree.report.ext.modules.log4jlog.Module=org.jfree.report.ext.modules.log4jlog.Log4JLogModule
 org.jfree.report.ext.modules.jfreechart.Module=org.jfree.report.ext.modules.jfreechart.JFreeChartModule
