--- a/jfreereport-ext/ant/build.xml
+++ b/jfreereport-ext/ant/build.xml
@@ -138,7 +138,7 @@
     <!-- compile the source -->
     <javac srcdir="${projectdir}/source"
       destdir="${projectdir}/build"
-      excludes="com/jrefinery/report/demo/**">
+      deprecation="true" debug="true">
       <classpath refid="build.classpath"/>
       <exclude name="com/jrefinery/report/ext/NetDump.java" unless="java-1.3.present"/>
       <exclude name="com/jrefinery/report/ext/demo/**" unless="servlet.present"/>
