Work on the buildscript, clean ups ...

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -33,7 +33,7 @@ org.jfree.report.layout.FontRenderer.isBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
-org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
+org.jfree.report.LogTarget=org.jfree.report.modules.misc.logging.systemout.SystemOutLogTarget
 
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
@@ -73,7 +73,6 @@ org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.bea
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
 org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
-org.jfree.report.modules.misc.logging.systemout.Module=org.jfree.report.modules.misc.logging.systemout.SystemOutLogModule
 org.jfree.report.modules.misc.configstore.base.Module=org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
 org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStoreModule
 
