Improved buildfiles (now almost complete ...)

--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -1,314 +1,28 @@
 <!-- An ANT build file for JFreeReport -->
 
-<!-- Written by David Gilbert. -->
-<!-- 12-Nov-2002 -->
+<!-- This is the master control file for all ant builds. -->
 
-<!-- To run this script, you need to make sure the libraries used by -->
-<!-- JFreeReport are copied to the ../lib directory (or edit the -->
-<!-- init-general task to point to the appropriate jar files). -->
+<project name="jfreereport" default="all" basedir="..">
 
-<!-- This script will create temporary directories ../build and -->
-<!-- ../distribution, as working areas.  A ../javadoc directory will -->
-<!-- be created for the Javadoc HTML pages. -->
+  <!-- core tasks                              -->
+  <!-- These tasks are needed for all modules  -->
+  <!-- ......................................  -->
+  <description>
+    We assume that at least a JDK 1.2.2 is installed.
+  </description>
 
-<!-- If you have comments about this script, please post a message -->
-<!-- in the JFreeReport forum. -->
-
-<project name="jfreereport" default="all" basedir=".">
-
-    <!-- Initialisation. -->
-    <target name="init" description="Initialise parameters.">
-        <tstamp />
-        <!-- BaseDirectory is different for either cvs target and build target -->
-	<!-- base dir is set elsewhere and cannot be redefined :( -->
-        <property name="projectdir" value=".." />
-        <property name="builddir" value="${projectdir}/build" />
-        <property name="libdir" value="${projectdir}/lib" />
-        <property name="BeanShell-jar" value="bsh-1.2b6.jar" />
-        <property name="GnuJAXP-jar" value="gnujaxp.jar" />
-        <property name="iText-jar" value="itext-1.00.jar" />
-        <property name="JCommon-jar" value="jcommon-0.8.3.jar" />
-        <property name="Pixie-jar" value="pixie-0.8.0.jar" />
-        <property name="POI-jar" value="jakarta-poi-1.10.0-dev-20030222.jar" />
-
-        <path id="build.classpath">
-            <pathelement location="${libdir}/${BeanShell-jar}" />
-            <pathelement location="${libdir}/${GnuJAXP-jar}" />
-            <pathelement location="${libdir}/${iText-jar}" />
-            <pathelement location="${libdir}/${JCommon-jar}" />
-            <pathelement location="${libdir}/${Pixie-jar}" />
-            <pathelement location="${libdir}/${POI-jar}" />
-        </path>
-
-        <property name="jfreereport.name" value="jfreereport" />
-        <property name="jfreereport.version" value="0.8.3d" />
-    </target>
-
-    <!-- Compile the JFreeReport classes -->
-    <target name="compile" depends="init"
-            description="Compile the JFreeReport source code.">
-
-        <!-- create a temp build directory -->
-        <mkdir dir="${projectdir}/build" />
-
-        <!-- compile the source -->
-        <javac srcdir="${projectdir}/source"
-               destdir="${projectdir}/build"
-               excludes="com/jrefinery/report/demo/**"
-               deprecation="true" debug="true"
-          >
-            <classpath refid="build.classpath" />
-        </javac>
-
-        <!-- copy across the BeanShell header file -->
-        <copy file="${projectdir}/source/com/jrefinery/report/function/BSHExpressionHeader.txt"
-          tofile="${projectdir}/build/com/jrefinery/report/function/BSHExpressionHeader.txt" />
-
-        <!-- include the jfreereport.properties -->
-        <!-- copy across the icons -->
-        <copy todir="${projectdir}/build">
-            <fileset dir="${projectdir}/source">
-                <include name="**/*.properties" />
-                <include name="**/*.txt" />
-            </fileset>
-        </copy>
-
-        <!-- copy across the icons -->
-        <copy todir="${projectdir}/build/com/jrefinery/report/resources">
-            <fileset dir="${projectdir}/source/com/jrefinery/report/resources">
-                <include name="**/*.gif" />
-                <include name="**/*.dtd" />
-            </fileset>
-        </copy>
-
-        <!-- make the jar -->
-        <jar jarfile="${projectdir}/${jfreereport.name}-${jfreereport.version}.jar"
-             basedir="${projectdir}/build" />
-
-        <!-- delete the temp directory -->
-        <delete dir="${projectdir}/build" />
-    </target>
-
-    <!-- Compile the JFreeReport DEMO classes -->
-    <!-- This target creates a jar file containing all demo classes. -->
-    <!-- The core classes are contained in the JFreeReport jar. -->
-    <target name="compile-demo" depends="compile"
-            description="Compile the JFreeReport demo source code.">
-
-        <!-- create a temporary build directory -->
-        <delete dir="${projectdir}/build" />
-        <mkdir dir="${projectdir}/build" />
-
-        <!-- compile the demo source -->
-        <javac srcdir="${projectdir}/source/com/jrefinery/report/demo"
-               destdir="${projectdir}/build"
-	             sourcepath="${projectdir}/source"
-               deprecation="true" debug="true">
-            <classpath refid="build.classpath" />
-        </javac>
-
-        <!-- include the report definition files -->
-        <copy todir="${projectdir}/build/com/jrefinery/report/demo">
-            <fileset dir="${projectdir}/source/com/jrefinery/report/demo">
-                <include name="**/*.xml" />
-            </fileset>
-        </copy>
-
-        <!-- include the butterfly image file -->
-        <copy file="${projectdir}/source/com/jrefinery/report/demo/anim0002.wmf" tofile="${projectdir}/build/com/jrefinery/report/demo/anim0002.wmf" />
-
-        <!-- include the gorilla image file -->
-        <copy file="${projectdir}/source/com/jrefinery/report/demo/gorilla.jpg" tofile="${projectdir}/build/com/jrefinery/report/demo/gorilla.jpg" />
-
-        <!-- make the jar file -->
-        <jar jarfile="${projectdir}/${jfreereport.name}-${jfreereport.version}-demo.jar"
-             basedir="${projectdir}/build"
-	           includes="com/jrefinery/report/demo/**">
-            <manifest>
-                <attribute name="Main-Class" value="com.jrefinery.report.demo.JFreeReportDemo" />
-                <attribute name="Class-Path"
-                  value="${jfreereport.name}-${jfreereport.version}.jar lib/${BeanShell-jar} lib/${GnuJAXP-jar} lib/${iText-jar} lib/${JCommon-jar} lib/${Pixie-jar} lib/${POI-jar}"/>
-            </manifest> 
-        </jar>
-        
-        <!-- remove the temp build area -->
-        <delete dir="${projectdir}/build" />
-    </target>
-
-    <!-- Generate the JFreeReport JavaDoc HTML pages -->
-    <target name="javadoc" depends="init">
-        <delete dir="${projectdir}/javadoc" />
-        <mkdir dir="${projectdir}/javadoc" />
-        <javadoc destdir="${projectdir}/javadoc"
-                 windowtitle="JFreeReport Class Library"
-                 overview="../source/overview.html">
-            <classpath refid="build.classpath" />
-            <packageset dir="${projectdir}/source" defaultexcludes="yes">
-                <include name="com/jrefinery/report/**" />
-                <exclude name="com/jrefinery/report/demo/**" />  
-            </packageset>
-        </javadoc>
-    </target>
-
-    <!-- Make .zip distribution for JFreeReport -->
-    <target name="make-zip" depends="compile-demo">
-
-        <!-- make a temporary distribution directory -->
-        <mkdir dir="${projectdir}/distribution" />
-
-        <!-- copy across README -->
-        <copy file="${projectdir}/README" tofile="${projectdir}/distribution/README" />
-
-        <!-- copy across ChangeLog -->
-        <copy file="${projectdir}/ChangeLog" tofile="${projectdir}/distribution/ChangeLog" />
-
-        <!-- copy across LICENCE -->
-        <copy file="${projectdir}/licence-LGPL.txt" tofile="${projectdir}/distribution/licence-LGPL.txt" />
-
-        <!-- copy across migration.txt -->
-        <copy file="${projectdir}/migration.txt" tofile="${projectdir}/distribution/migration.txt" />
-
-        <!-- copy across runtime jar file and demo jar file -->
-        <copy file="${projectdir}/${jfreereport.name}-${jfreereport.version}.jar" tofile="${projectdir}/distribution/${jfreereport.name}-${jfreereport.version}.jar" />
-        <copy file="${projectdir}/${jfreereport.name}-${jfreereport.version}-demo.jar" tofile="${projectdir}/distribution/${jfreereport.name}-${jfreereport.version}-demo.jar" />
-    
-        <!-- copy across source files -->
-        <copy todir="${projectdir}/distribution/source">
-            <fileset dir="${projectdir}/source" />
-        </copy>
-
-        <!-- copy across resource files (example PDFs) -->
-        <copy todir="${projectdir}/distribution/resource">
-            <fileset dir="${projectdir}/resource" />
-        </copy>
-
-        <!-- copy across lib files -->
-        <copy todir="${projectdir}/distribution/lib">
-            <fileset dir="${projectdir}/lib" />
-        </copy>
-
-        <!-- copy across ant build file (this file) -->
-        <copy todir="${projectdir}/distribution/ant">
-            <fileset dir="${projectdir}/ant" />
-        </copy>
-
-        <!-- copy across checkstyle property file -->
-        <copy todir="${projectdir}/distribution/checkstyle">
-            <fileset dir="${projectdir}/checkstyle" />
-        </copy>
-
-        <!-- convert end-of-line characters in text files -->
-        <!-- end of file does not need to be marked, and causes trouble if it is -->
-        <fixcrlf srcdir="${projectdir}/distribution/source"
-                 eol="crlf" eof="remove"
-                 excludes="**/*.jpg **/*.gif **/*.png **/*.wmf" />
-        <fixcrlf srcdir="${projectdir}/distribution/ant"
-                 eol="crlf" eof="remove"/>
-
-        <!-- make the zip file -->
-        <zip zipfile="${projectdir}/${jfreereport.name}-${jfreereport.version}.zip">
-             <zipfileset dir="${projectdir}/distribution"
-                         prefix="${jfreereport.name}-${jfreereport.version}" />
-        </zip>
-
-        <!-- delete the temporary distribution directory -->
-        <delete dir="${projectdir}/distribution" />
-
-    </target>
-
-    <!-- Make .tar.gz distribution for JFreeReport -->
-    <target name="make-targz" depends="compile-demo">
-
-        <!-- make a temporary distribution directory -->
-        <mkdir dir="${projectdir}/distribution" />
-
-        <!-- copy across README -->
-        <copy file="${projectdir}/README" tofile="${projectdir}/distribution/README" />
-
-        <!-- copy across ChangeLog -->
-        <copy file="${projectdir}/ChangeLog" tofile="${projectdir}/distribution/ChangeLog" />
-
-        <!-- copy across LICENCE -->
-        <copy file="${projectdir}/licence-LGPL.txt" tofile="${projectdir}/distribution/licence-LGPL.txt" />
-
-        <!-- copy across migration.txt -->
-        <copy file="${projectdir}/migration.txt" tofile="${projectdir}/distribution/migration.txt" />
-
-        <!-- copy across runtime jar file and demo jar file -->
-        <copy file="${projectdir}/${jfreereport.name}-${jfreereport.version}.jar" tofile="${projectdir}/distribution/${jfreereport.name}-${jfreereport.version}.jar" />
-        <copy file="${projectdir}/${jfreereport.name}-${jfreereport.version}-demo.jar" tofile="${projectdir}/distribution/${jfreereport.name}-${jfreereport.version}-demo.jar" />
-    
-        <!-- copy across source files -->
-        <copy todir="${projectdir}/distribution/source">
-            <fileset dir="${projectdir}/source" />
-        </copy>
-
-        <!-- copy across resource files (DTD and example PDFs) -->
-        <copy todir="${projectdir}/distribution/resource">
-            <fileset dir="${projectdir}/resource" />
-        </copy>
-
-        <!-- copy across lib files -->
-        <copy todir="${projectdir}/distribution/lib">
-            <fileset dir="${projectdir}/lib" />
-        </copy>
-
-        <!-- copy across ant build file (this file) -->
-        <copy todir="${projectdir}/distribution/ant">
-            <fileset dir="${projectdir}/ant" />
-        </copy>
-
-        <!-- copy across checkstyle property file -->
-        <copy todir="${projectdir}/distribution/checkstyle">
-            <fileset dir="${projectdir}/checkstyle" />
-        </copy>
-
-        <!-- convert end-of-line characters in text files -->
-        <fixcrlf srcdir="${projectdir}/distribution/source"
-                 eol="lf" eof="remove"
-                 excludes="**/*.jpg **/*.gif **/*.png **/*.wmf" />
-        <fixcrlf srcdir="${projectdir}/distribution/ant"
-                 eol="lf" eof="remove"/>
-
-        <!-- make the tar.gz file -->
-        <tar tarfile="${projectdir}/${jfreereport.name}-${jfreereport.version}.tar">
-             <tarfileset dir="${projectdir}/distribution"
-                         prefix="${jfreereport.name}-${jfreereport.version}" />
-        </tar>
-        <gzip zipfile="${projectdir}/${jfreereport.name}-${jfreereport.version}.tar.gz"
-              src="${projectdir}/${jfreereport.name}-${jfreereport.version}.tar" />
-        <delete file="${projectdir}/${jfreereport.name}-${jfreereport.version}.tar" />
-
-        <!-- delete the temporary distribution directory -->
-        <delete dir="${projectdir}/distribution" />
-
-    </target>
-
-    <!-- ALL -->
-    <target name="all" 
-            depends="compile,compile-demo,javadoc,make-zip,make-targz"
-            description="Compiles JFreeReport, builds the jar files, generates the Javadoc HTML pages and creates distribution files (.zip and .tar.gz).">
-    </target>
-
-    <!-- Read the latest sources from the CVS -->
-    <target name="cvs-checkout" description="Retrieves the latest sources from the cvs archive at sourceforge.">
-      <cvspass cvsroot=":pserver:anonymous@cvs.sourceforge.net:/cvsroot/jfreereport"
-             password=""
-        />
-      <cvs cvsRoot=":pserver:anonymous@cvs.sourceforge.net:/cvsroot/jfreereport"
-           package="jfreereport"
-           compression="true" compressionlevel="5"
-           dest="."
-        />
-    </target>
-
-    <!-- Checkout the sources from sourceforge and rebuild JFreeReport -->
-    <!-- Warning: This requires a different basedir -->
-    <target name="cvs-rebuild"
-            depends="cvs-checkout"
-            description="Checks out the sources from sourceforge and rebuilds the sources by using the ant-script within the sources">
-        <property name="projectdir" value="." />
-        <ant antfile="ant/build.xml" dir="jfreereport" target="all"/>
-    </target>
+  <target name="all">
+    <dirname property="antfile.dir" file="${ant.file}"/>
+    <echo>
+      ${antfile.dir}
+    </echo>
+    <ant antfile="${antfile.dir}/build-core.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-misc.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-output-misc.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-output-table.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-output-pageable.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-parser.xml" target="all"/>
+    <ant antfile="${antfile.dir}/build-reference.xml" target="all"/>
+  </target>
 
 </project>
