Build-scripts are fully functional now ...

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -7,8 +7,8 @@
 jfreereport.name=jfreereport
 jfreereport.version=0.8.4
 
-build.debug=false
-build.optimize=true
+build.debug=true
+build.optimize=false
 build.deprecation=true
 
 #
