--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -33,7 +33,7 @@ org.jfree.report.layout.FontRenderer.isBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
-org.jfree.report.LogTarget=org.jfree.report.modules.misc.logging.systemout.SystemOutLogTarget
+org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
 
 #
 # Should the logical page add comments to the generated PhysicalOperations? This is
