--- a/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/converter/module.properties
@@ -17,17 +17,13 @@ depends:
   version.minor: 84
 
 depends:
-  module: org.jfree.report.modules.parser.ext.ExtParserModule
-  version.major: 0
-  version.minor: 84
-
-depends:
   module: org.jfree.report.modules.parser.simple.SimpleParserModule
   version.major: 0
   version.minor: 84
 
 depends:
-  module: org.jfree.report.modules.parser.base.ParserBaseModule
+  module: org.jfree.report.modules.parser.extwriter.ExtWriterModule
   version.major: 0
   version.minor: 84
+
 
