--- a/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
@@ -10,3 +10,8 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+
+depends:
+  module: org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
+  version.major: 0
+  version.minor: 84
