--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -45,7 +45,7 @@ jaxp-jar-file=gnujaxp.jar
 itext-jar-file=itext-1.00.jar
 
 # Used by: module-output-table-xml
-jakarta-poi-jar-file=jakarta-poi-1.10.0-dev-20030222.jar
+jakarta-poi-jar-file=poi-2.0-pre3-20030728.jar
 
 ##############################################################
 #
