--- a/jfreereport-ext/ant/build.xml
+++ b/jfreereport-ext/ant/build.xml
@@ -75,7 +75,7 @@
     <property name="servlet-jar" value="servlet.jar"/>
 
     <property name="jfreereport-ext.name" value="jfreereport-ext"/>
-    <property name="jfreereport-ext.version" value="0.8.3c"/>
+    <property name="jfreereport-ext.version" value="0.8.3e"/>
   </target>
 
   <!-- rebuild the base distribution if necessary -->
@@ -108,12 +108,12 @@
     <!-- JFreeReport base libraries -->
     <property name="BeanShell-jar" value="bsh-1.2b6.jar" />
     <property name="GnuJAXP-jar" value="gnujaxp.jar" />
-    <property name="iText-jar" value="itext-0.99.jar" />
-    <property name="JCommon-jar" value="jcommon-0.8.3.jar" />
+    <property name="iText-jar" value="itext-1.00.jar" />
+    <property name="JCommon-jar" value="jcommon-0.8.4-cvs.jar" />
     <property name="Pixie-jar" value="pixie-0.8.0.jar" />
     <property name="POI-jar" value="jakarta-poi-1.10.0-dev-20030222.jar" />
-    <property name="JFreeReport-jar" value="jfreereport-0.8.3c.jar"/>
-    <property name="JFreeReport-demo-jar" value="jfreereport-0.8.3c-demo.jar"/>
+    <property name="JFreeReport-jar" value="jfreereport-0.8.3e.jar"/>
+    <property name="JFreeReport-demo-jar" value="jfreereport-0.8.3e-demo.jar"/>
 
     <available file="${jfreereport-dir}/${JFreeReport-demo-jar}" property="jfreereport.present"/>
     <available file="${jfreereport-dir}/source/com/jrefinery/report/JFreeReportInfo.java" property="jfreereport.valid"/>
