More minor changes (docs, checkstyle) Todo: port of new changes from 083 branch ...

--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
@@ -7,3 +7,7 @@
 # If disabled, all content is inserted as text. So you won't be able to perform
 # calculations, but it is more safe in case of invalid cell formats.
 org.jfree.report.modules.output.table.xls.EnhancedDataFormat=true
+
+# Defines the Paper that should be used in the excel print setup.
+# If no paper is defined, an suitable paper will be selected automaticly. 
+#org.jfree.report.modules.output.table.xls.Paper=A4
