Added landscape pageformat property

--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
@@ -11,3 +11,8 @@ org.jfree.report.modules.output.table.xls.EnhancedDataFormat=true
 # Defines the Paper that should be used in the excel print setup.
 # If no paper is defined, an suitable paper will be selected automaticly. 
 #org.jfree.report.modules.output.table.xls.Paper=A4
+
+# Defines the Paper that should be used in the excel print setup.
+# If no paper is defined, an suitable paper will be selected automaticly.
+# Valid values are "Landscape" or "Portrait" 
+#org.jfree.report.modules.output.table.xls.PaperOrientation=Landscape
